--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -17,7 +17,7 @@
                 <span>Modify Data</span>
             </a>
             <a href="#" class="tab-link" onclick="showSection('manualSection', event)">
-                <i class="fa-solid fa-file-pen"></i>
+                <i class="fas fa-plus"></i>
                 <span>Manually Insert</span>
             </a>
         </div>
