--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -70,7 +70,7 @@
     <!-- Modify Form -->
     <form id="modifyForm" action="{{ url_for('admin_manageCourse') }}" method="POST" style="display: none;">
         <div id="manualSection" class="function-frame" style="width:100%">
-            <h4 style="text-align: center;">Manual Data Entry Section</h4>
+            <h4 style="text-align: center;">Modify by Entering Course Code</h4>
             <div class="profile-frame">
                 <div class="form-left">
                     <label id="departmentLabel">Department</label>
