--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -69,7 +69,7 @@
 
     <!-- Modify Form -->
     <form id="modifyForm" action="{{ url_for('admin_manageCourse') }}" method="POST" style="display: none;">
-        <div id="manualSection" class="function-frame" style="width:100%">
+        <div id="modifySection" class="function-frame" style="width:100%">
             <h4 style="text-align: center;">Modify by Entering Course Code</h4>
             <div class="profile-frame">
                 <div class="form-left">
