--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -25,7 +25,7 @@
 
     <!-- Upload Form -->
     <form id="uploadForm" action="{{ url_for('admin_manageCourse') }}" method="POST" enctype="multipart/form-data">
-        <div id="uploadSection" class="functi   on-frame">
+        <div id="uploadSection" class="function-frame">
             <div class="form-left" style="width: 100%">
                 <h4 style="text-align: center;">File Upload Section</h4>
                 <label for="course_list">
@@ -70,7 +70,7 @@
     <!-- Modify Form -->
     <form id="modifyForm" action="{{ url_for('admin_manageCourse') }}" method="POST" style="display: none;">
         <div id="modifySection" class="function-frame" style="width:100%">
-            <h4 style="text-align: center;">Modify by Entering Course Code</h4>
+            <h4 style="text-align: center;">Search and Modify by Department Code, Course Code, or Course Name</h4>
             <div class="profile-frame">
                 <div class="form-left">
                     <label id="departmentLabel">Department</label>
