--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -185,7 +185,7 @@
                 <tr>
                     <td>{{ loop.index }}</td> <!-- Display index starting from 1 -->
                     <!-- <td>{{ row.examID  }}</td> -->
-                    <td>{{ row.examDate }} - {{ row.examDay }}</td>
+                    <td>{{ row.examDate }} [{{ row.examDay }}]</td>
                     <td>{{ row.examStartTime }} - {{ row.examEndTime }}</td>
                     <td>{{ row.examProgramCode }}</td>
                     <td>{{ row.examCourseSectionCode }}</td>
