--- a/app/templates/adminPart/adminManageLecturer.html
+++ b/app/templates/adminPart/adminManageLecturer.html
@@ -11,8 +11,12 @@
                 <i class="fas fa-upload"></i>
                 <span>Upload File</span>
             </a>
-            <a href="#" class="tab-link" onclick="showSection('manualSection', event)">
+            <a href="#" class="tab-link" onclick="showSection('modifySection', event)">
                 <i class="fas fa-edit"></i>
+                <span>Modify Data</span>
+            </a>
+            <a href="#" class="tab-link" onclick="showSection('manualSection', event)">
+                <i class="fas fa-plus"></i>
                 <span>Manually Insert</span>
             </a>
         </div>
@@ -60,6 +64,10 @@
             </div>
         </div>
     </form>
+
+    <!-- Modify Form -->
+    <form id="modifyForm" action="{{ url_for('admin_manageLecturer') }}" method="POST" style="display: none;">
+    </form> 
 
     <!-- Manual Form -->
     <form id="manualForm" action="{{ url_for('admin_manageLecturer') }}" method="POST" style="display: none;">
