--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -73,6 +73,9 @@
             <h4 style="text-align: center;">Search and Modify by Department Code, Course Code, or Course Name</h4>
             <div class="profile-frame">
                 <div class="form-left">
+                    <label>Search</label>
+                    <input type="text" name="searching" value="{{ searching_text }}" required><br>
+
                     <label>Department</label>
                     <select name="courseDepartment" id="courseDepartment" required>
                         <option value="" selected>Choose Department</option>
@@ -80,27 +83,14 @@
                             <option value="{{ dept.departmentCode }}">{{ dept.departmentCode }} - {{ dept.departmentName }}</option>
                         {% endfor %}
                     </select><br>
-
-                    <label>Course Code/Section</label>
-                    <select name="courseCodeSection" id="courseCodeSection" required>
-                        <option value="" selected>Choose Course Code</option>
-                        {% for course in course_data %}
-                            <option value="{{ course.courseCodeSection }}">{{ course.courseCodeSection }}</option>
-                        {% endfor %}
-                    </select><br>
-
-                    <label>Course Name</label>
-                    <select name="courseName" id="courseName" required>
-                        <option value="" selected>Choose Course Name</option>
-                        {% for course in course_data %}
-                            <option value="{{ course.courseName }}">{{ course.courseName }}</option>
-                        {% endfor %}
-                    </select>
+                    
+                    <label>Course Section</label>
+                    <input type="text" name="courseSection" value="{{ courseSection_text }}" required>
                 </div>
 
                 <div class="form-middle">
-                    <label>Course Section</label>
-                    <input type="text" name="courseSection" value="{{ courseSection_text }}" required><br>
+                    <label>Course Name</label>
+                    <input type="text" name="courseName" value="{{ courseName_text }}" required><br>
 
                     <label>Course Code</label>
                     <input type="text" name="courseCode" value="{{ courseCode_text }}" required><br>
