--- a/app/templates/frontPart/register.html
+++ b/app/templates/frontPart/register.html
@@ -43,7 +43,7 @@
                 <select name="department" required>
                     <option value="" disabled selected>Select Department</option>
                     {% for dept in department_data %}
-                        <option value="{{ dept.departmentCode }} - {{ dept.departmentName }}">
+                        <option value="{{ dept.departmentCode }}">
                             ({{ dept.departmentCode }}) {{ dept.departmentName }}
                         </option>
                     {% endfor %}
