--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -67,102 +67,95 @@
 
 
 
-<form id="courseForm" action="{{ url_for('admin_manageCourse') }}" method="POST">
-    <div id="formSection" class="function-frame" style="width:100%">
-        
-        {% if form_type == "modify" %}
-            <h4 style="text-align: center;">Search and Modify by Department Code, Course Code, or Course Name</h4>
-            <label>Search</label>
-            <input type="text" name="searching" value="{{ searching_text }}" required><br>
-        {% else %}
-            <h4 style="text-align: center;">Manual Data Entry Section</h4>
-        {% endif %}
-        
-        <div class="profile-frame">
-            <div class="form-left">
-                <label>Department</label>
-                {% if form_type == "modify" %}
-                    <select name="courseDepartment" id="courseDepartment" required>
+    <form  id="{{ form_mode }}Form" action="{{ url_for('admin_manageCourse') }}"  method="POST" style="display: none;">
+        <div id="{{ form_mode }}Section" class="function-frame" style="width:100%">
+            <h4 style="text-align: center;">
+                {% if form_mode == 'modify' %}
+                    Search and Modify by Department Code, Course Code, or Course Name
+                {% else %}
+                    Manual Data Entry Section
+                {% endif %}
+            </h4>
+
+            <div class="profile-frame">
+                <div class="form-left">
+                    {% if form_mode == 'modify' %}
+                        <label>Search</label>
+                        <input type="text" name="searching" value="{{ searching_text }}" required><br>
+                    {% endif %}
+
+                    <label>Department</label>
+                    <select name="courseDepartment" id="{% if form_mode == 'modify' %}courseDepartment{% else %}courseDepartmentSelection{% endif %}" required>
                         <option value="" selected>Choose Department</option>
                         {% for dept in department_data %}
-                            <option value="{{ dept.departmentCode }}">{{ dept.departmentCode }} - {{ dept.departmentName }}</option>
+                            {% if form_mode == 'modify' %}
+                                <option value="{{ dept.departmentCode }}">{{ dept.departmentCode }} - {{ dept.departmentName }}</option>
+                            {% else %}
+                                <option value="{{ dept.departmentCode }} - {{ dept.departmentName }}">
+                                    ({{ dept.departmentCode }}) {{ dept.departmentName }}
+                                </option>
+                            {% endif %}
                         {% endfor %}
-                    </select>
-                {% else %}
-                    <select id="courseDepartmentSelection" name="courseDepartment" required>
-                        <option value="" disabled selected>Select Department</option>
-                        {% for dept in department_data %}
-                            <option value="{{ dept.departmentCode }} - {{ dept.departmentName }}">
-                                ({{ dept.departmentCode }}) {{ dept.departmentName }}
-                            </option>
-                        {% endfor %}
-                    </select>
-                {% endif %}
-                <br>
+                    </select><br>
 
-                <label>Course Code</label>
-                <input type="text" name="courseCode" value="{{ courseCode_text }}" required><br>
+                    <label>Course Section</label>
+                    <input type="text" name="courseSection" value="{{ courseSection_text }}" required>
+                </div>
 
-                <label>Course Section</label>
-                <input type="text" name="courseSection" value="{{ courseSection_text }}" required>
-            </div>
+                <div class="form-middle">
+                    <label>Course Name</label>
+                    <input type="text" name="courseName" value="{{ courseName_text }}" required><br>
 
-            <div class="form-middle">
-                <label>Course Name</label>
-                <input type="text" name="courseName" value="{{ courseName_text }}" required><br>
+                    <label>Course Code</label>
+                    <input type="text" name="courseCode" value="{{ courseCode_text }}" required><br>
 
-                <label>Course Credit Hour(s)</label>
-                <input type="number" name="courseHour" value="{{ courseHour_text }}" required><br>
+                    <label>Course Credit Hour(s)</label>
+                    <input type="number" name="courseHour" value="{{ courseHour_text }}" required>
+                </div>
 
-                <label>Course Number of Student(s)</label>
-                <input type="number" name="courseStudent" value="{{ courseStudent_text }}" required>
-            </div>
-
-            <div class="form-right">
-                {% if form_type == "modify" %}
-                    <label>Practical Lecturer</label>
-                    <input type="text" name="coursePractical" value="{{ coursePractical_text }}" required><br>
-                    <label>Tutorial Lecturer</label>
-                    <input type="text" name="courseTutorial" value="{{ courseTutorial_text }}" required>
-                {% else %}
+                <div class="form-right">
                     <label>Practical Lecturer</label>
                     <select id="practicalLecturerSelect" name="coursePractical" required>
                         <option value="" disabled selected>Select Practical Lecturer</option>
+                        <!-- Will be populated by JavaScript -->
                     </select><br>
+
                     <label>Tutorial Lecturer</label>
                     <select id="tutorialLecturerSelect" name="courseTutorial" required>
                         <option value="" disabled selected>Select Tutorial Lecturer</option>
-                    </select>
+                        <!-- Will be populated by JavaScript -->
+                    </select><br>
+                    
+                    <label>Course Number of Student(s)</label>
+                    <input type="number" name="courseStudent" value="{{ courseStudent_text }}" required>
+                </div>
+            </div>
+
+            <input type="hidden" name="form_type" value="{{ form_mode }}">
+
+            <br>
+            {% if courseUploadResult %}
+                <div class="result-message">{{ courseUploadResult }}</div>
+            {% elif courseUploadErrors %}
+                <div class="error-message">{{ courseUploadErrors }}</div>
+            {% elif get_flashed_messages(with_categories=true) %}
+                {% for category, message in get_flashed_messages(with_categories=true) %}
+                    <div class="alert alert-{{ category }}">
+                        <strong>{{ category.capitalize() }}:</strong> {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+            <br>
+
+            <div class="button-wrapper">
+                {% if form_mode == 'modify' %}
+                    <button type="submit">Update Course</button>
+                {% else %}
+                    <button type="submit">Add New Course</button>
                 {% endif %}
             </div>
         </div>
-
-        <!-- Form type flag -->
-        <input type="hidden" name="form_type" value="{{ form_type }}">
-        
-        <!-- Messages -->
-        {% if courseUploadResult %}
-            <div class="result-message">{{ courseUploadResult }}</div>
-        {% elif courseUploadErrors %}
-            <div class="error-message">{{ courseUploadErrors }}</div>
-        {% elif get_flashed_messages(with_categories=true) %}
-            {% for category, message in get_flashed_messages(with_categories=true) %}
-                <div class="alert alert-{{ category }}">
-                    <strong>{{ category.capitalize() }}:</strong> {{ message }}
-                </div>
-            {% endfor %}
-        {% endif %}
-
-        <br>
-        <div class="button-wrapper">
-            {% if form_type == "modify" %}
-                <button type="submit">Update Course</button>
-            {% else %}
-                <button type="submit">Add New Course</button>
-            {% endif %}
-        </div>
-    </div>
-</form>
+    </form>
 
 
     <br><br>
