--- a/app/static/css/admin/adminHome.css
+++ b/app/static/css/admin/adminHome.css
@@ -88,7 +88,7 @@ html, body {
     flex-grow: 1;
 }
 
-.tab-nav2 {
+.second-nav {
     display: ruby-text;
     background-color: #f1f1f1;
     border-radius: 10px;
