--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -8,11 +8,11 @@
     <!-- Top Centered Tabs -->
     <div class="tab-container">
         <div class="second-nav">
-            <a href="#" class="tab-link" onclick="showSection('uploadSection', event)">
+            <a href="#" class="tab-link active" data-section="uploadSection" onclick="showSection('uploadSection', event)">
                 <i class="fas fa-upload"></i>
                 <span>Upload File</span>
             </a>
-            <a href="#" class="tab-link" onclick="showSection('manualSection', event)">
+            <a href="#" class="tab-link" data-section="manualSection"onclick="showSection('manualSection', event)">
                 <i class="fas fa-plus"></i>
                 <span>Manually Insert</span>
             </a>
