--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -8,8 +8,8 @@
     <!-- Top Centered Tabs -->
     <div class="tab-container">
         <div class="second-nav">
-            <a href="#" class="tab-link active" data-section="announceSection"onclick="showSection('announceSection', event)">
-                <i class="fas fa-envelop"></i>
+            <a href="#" class="tab-link active" data-section="announceSection" onclick="showSection('announceSection', event)">
+                <i class="fas fa-envelope"></i>
                 <span>Notification</span>
             </a>
             <a href="#" class="tab-link" data-section="uploadSection" onclick="showSection('uploadSection', event)">
