--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -4,25 +4,32 @@
 <div class="menu-section">
     <h2>Manage Exam</h2>
     <!-- Top Centered Tabs -->
+    <!-- Top Centered Tabs -->
     <div class="tab-container">
-        <div class="tab-nav2">
-            <a href="#" class="tab-link active" onclick="showSection('uploadSection', event)">
+        <div class="second-nav">
+            <a href="#" class="tab-link active" data-section="announceSection" onclick="showSection('announceSection', event)">
+                <i class="fas fa-envelope"></i>
+                <span>Notification</span>
+            </a>
+            <a href="#" class="tab-link" data-section="uploadSection" onclick="showSection('uploadSection', event)">
                 <i class="fas fa-upload"></i>
                 <span>Upload File</span>
             </a>
-            <a href="#" class="tab-link" onclick="showSection('modifySection', event)">
-                <i class="fas fa-edit"></i>
-                <span>Modify Data</span>
-            </a>
-            <a href="#" class="tab-link" onclick="showSection('manualSection', event)">
+            <a href="#" class="tab-link" data-section="manualSection"onclick="showSection('manualSection', event)">
                 <i class="fas fa-plus"></i>
                 <span>Manually Insert</span>
             </a>
         </div>
     </div>
 
+    <!-- Announce Form -->
+    <form id="announceForm" action="{{ url_for('admin_manageCourse') }}" method="POST" enctype="multipart/form-data">
+        <div id="announceSection" class="function-frame">
+        </div>
+    </form>
+
     <!-- Upload Form -->
-    <form id="uploadForm" action="{{ url_for('admin_manageExam') }}" method="POST" enctype="multipart/form-data">
+    <form id="uploadForm" action="{{ url_for('admin_manageExam') }}" method="POST" enctype="multipart/form-data" style="display: none;">
         <div id="uploadSection" class="function-frame">
             <div class="form-left" style="width: 100%">
                 <h4 style="text-align: center;">File Upload Section</h4>
@@ -63,11 +70,6 @@
             </div>
         </div>
     </form>
-
-    <!-- Modify Form -->
-    <form id="modifyForm" action="{{ url_for('admin_manageExam') }}" method="POST" style="display: none;">
-    </form>
-
 
     <!-- Manual Form -->
     <form id="manualForm" action="{{ url_for('admin_manageExam') }}" method="POST" style="display: none;">
@@ -160,7 +162,7 @@
 
 
     <br><br>
-    <h3>Table Record</h3>
+    <h2>Table Record</h2>
     <!--<label>
         Alert<br>
         1. ID as the PK<br>
