--- a/app/templates/adminPart/adminManageLecturer.html
+++ b/app/templates/adminPart/adminManageLecturer.html
@@ -23,7 +23,7 @@
     </div>
 
     <!-- Announce Form -->
-    <form id="announceForm" action="{{ url_for('admin_manageCourse') }}" method="POST" enctype="multipart/form-data">
+    <form id="announceForm" action="{{ url_for('admin_manageLecturer') }}" method="POST" enctype="multipart/form-data">
         <div id="announceSection" class="function-frame">
         </div>
     </form>
