--- a/app/templates/adminPart/adminManageDepartment.html
+++ b/app/templates/adminPart/adminManageDepartment.html
@@ -19,7 +19,7 @@
     </div>
 
     <!-- Announce Form -->
-    <form id="announceForm" action="{{ url_for('admin_manageCourse') }}" method="POST" enctype="multipart/form-data">
+    <form id="announceForm" action="{{ url_for('admin_manageDepartment') }}" method="POST" enctype="multipart/form-data">
         <div id="announceSection" class="function-frame">
             <!-- 🔽 Add this hidden input here -->
             <input type="hidden" name="form_type" value="announce">
